force-app/main/default/objects/Ai_Configs__c/Ai_Configs__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Ai Configs</label>
<!-- Gitting -->
</CustomObject>