force-app/main/default/objects/Ai_Configs__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
<!-- Gitting -->
</CustomField>