force-app/main/default/objects/Ai_Configs__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Active</label>
    <type>Checkbox</type>
<!-- Gitting -->
</CustomField>