force-app/main/default/objects/Ai_Configs__c/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <label>Model_Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
<!-- Gitting -->
</CustomField>