force-app/main/default/objects/Ai_Configs__c/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <label>Named_Credential</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
<!-- Gitting -->
</CustomField>