force-app/main/default/objects/Ai_Configs__c/fields/Response_Content_Path__c.field-meta.xml
<CustomField>
    <fullName>Response_Content_Path__c</fullName>
    <label>Response_Content_Path</label>
    <length>255</length>
    <type>Text</type>
<!-- Gitting -->
</CustomField>